--- a/examples/tutorial/tut1.html
+++ b/examples/tutorial/tut1.html
@@ -4,15 +4,22 @@
 <meta charset="UTF-8">
 <title>tut1</title>
 
-<style type="text/css">
-.ln { color: rgb(0,0,0); font-weight: normal; font-style: normal; }
-.s0 { color: rgb(0,0,128); font-weight: bold; }
-.s1 { }
-.s2 { color: rgb(0,0,255); }
-.s3 { color: rgb(0,128,0); font-weight: bold; }
-</style>
+<script type="text/javascript" src="sh/shCore.js"></script>
+<script type="text/javascript" src="sh/shBrushJScript.js"></script>
+<link href="sh/shCore.css" rel="stylesheet" type="text/css" />
+<link href="sh/shThemeDefault.css" rel="stylesheet" type="text/css" />    
 
-<script type="text/javascript" src="http://caat.googlecode.com/files/caat.js"></script>
+<script type="text/javascript" src="../../build/caat.js"></script>
+
+<script type="text/javascript">
+     SyntaxHighlighter.all()
+</script>
+    
+<style>
+    div.code {
+       font-size: .7em;
+    }
+</style>
 
 </head>
 
@@ -20,47 +27,143 @@
 <body style="color:black; background:#ffffff;">
 
 <div class="section">
-    <h1>Getting started</h1>
-<p>One of the minimum CAAT library setup programs could be this one:
-<pre>
-<a name="l1"><span class="ln">1    </span></a><span class="s0">function </span><span class="s1">__CAAT_tut1_init() {
-<a name="l2"><span class="ln">2    </span></a>
-<a name="l3"><span class="ln">3    </span></a>    </span><span class="s0">var </span><span class="s1">director = </span><span class="s0">new </span><span class="s1">CAAT.Director().initialize(</span><span class="s2">100</span><span class="s1">,</span><span class="s2">100</span><span class="s1">);
-<a name="l4"><span class="ln">4    </span></a>    </span><span class="s0">var </span><span class="s1">scene=     </span><span class="s0">new </span><span class="s1">CAAT.Scene().create();
-<a name="l5"><span class="ln">5    </span></a>    </span><span class="s0">var </span><span class="s1">circle=    </span><span class="s0">new </span><span class="s1">CAAT.ShapeActor().create().setLocation(</span><span class="s2">20</span><span class="s1">,</span><span class="s2">20</span><span class="s1">).setSize(</span><span class="s2">60</span><span class="s1">,</span><span class="s2">60</span><span class="s1">).setFillStyle(</span><span class="s3">'#ff0000'</span><span class="s1">).setStrokeStyle(</span><span class="s3">'#000000'</span><span class="s1">);
-<a name="l6"><span class="ln">6    </span></a>
-<a name="l7"><span class="ln">7    </span></a>    scene.addChild(circle);
-<a name="l8"><span class="ln">8    </span></a>    director.addScene(scene);
-<a name="l9"><span class="ln">9    </span></a>
-<a name="l14"><span class="ln">14   </span></a>    director.loop(</span><span class="s2">1</span><span class="s1">);
-<a name="l15"><span class="ln">15   </span></a>}
-<a name="l16"><span class="ln">16   </span></a>
-<a name="l17"><span class="ln">17   </span></a>window.addEventListener(</span><span class="s3">'load'</span><span class="s1">, __CAAT_tut1_init, </span><span class="s0">false</span><span class="s1">);</span>
-</pre>
+    <h1>Before you start</h1>
+    <p>There's only one requisite beforing using CAAT and is that of referencing the library.</p>
+    <p>In the library bundle under the folder <strong>build</strong> there's a file called <strong>caat.js</strong> which
+    contains the whole library compiled into a single file. We must include the scripts contained into that file
+    in the header section of your html file with:</p>
+    <div class="code">
+        <pre class="brush: js; auto-links: false; toolbar: false;">
+            <script type="text/javascript" src="../../build/caat.js"></script>
+        </pre>
+    </div>
 
-<p>By executing it, we'll get a black-outlined red circle at position 20,20 and of radius 30.
-<p>Despite its simplicity, some facts must be taken into account:
-<ol>
-<li>When using CAAT, it's mandatory to create a CAAT.Director instance. The Director is the entry point to CAAT.
-<li>The Director instance is fed with scenes. CAAT.Scene instances are advanced actor containers. We'll see how the Director manages Scenes, and how to elegantly switch from one to the other.
-<li>Scenes are fed with CAAT.Actor instances. Indeed, as much as needed.
-<li>CAAT.Actor instances and its subinstances (ShapeActor, SpriteActor, etc.) have a lifecycle, so it must be explicitly stated the call to create method.
-<li>We must call director.loop to signal CAAT to start delivering content to the canvas.
-</ol>
+    <p>All the examples in this series tutorial and demos include this line at the top of the main file.</p>
+    <p>Make sure to change the path '../../build/' to your needs.</p>
 
-<p>And that's it, our red circle:
 </div>
 
-<div class="sample"><canvas id="_c1"></canvas></div>
+<div class="section">
+<h1>Getting started</h1>
+<p>One of the minimum CAAT library setup programs could be this one:
+
+
+    <div class="code">
+    <pre class="brush: js; auto-links: false; toolbar: false;">
+    <script>
+        var director = new CAAT.Director().initialize(
+                100,    // 100 pixels wide
+                100,    // 100 pixels across
+                document.getElementById('_c1'));
+
+        var scene=     new CAAT.Scene().create();
+
+        var circle=    new CAAT.ShapeActor().
+                create().
+                setLocation(20,20).
+                setSize(60,60).
+                setFillStyle('#ff0000').
+                setStrokeStyle('#000000');
+
+        scene.addChild(circle);
+        director.addScene(scene);
+
+        director.loop(1);
+    </script>
+    </pre>
+    </div>
+
+    <p>By executing it, we'll get a black-outlined red circle at position 20,20 and of radius 30.
+    <p>Despite its simplicity, some facts must be taken into account:
+    <ol>
+    <li>When using CAAT, it's mandatory to create a CAAT.Director instance. The Director is the entry point to CAAT.
+    <li>You must explictly supply a canvas size in pixels. In this example 100 by 100 pixels.</li>
+    <li>The director will perform animations in a HTML document canvas element. We can supply a reference to a canvas,
+    or simple issue a <strong>new CAAT.Director().initialize(100,100)</strong> command and let the director create a canvas for us.</li>
+    <li>The Director instance is fed with scenes. CAAT.Scene instances are advanced actor containers. We'll see how the Director manages Scenes, and how to elegantly switch from one to the other.
+    <li>Scenes are fed with CAAT.Actor instances. Indeed, as much as needed.
+    <li>CAAT.Actor instances and its subinstances (ShapeActor, SpriteActor, etc.) have a lifecycle, so it must be explicitly stated the call to create method.
+    <li>We must call director.loop to signal CAAT to start delivering content to the canvas.
+    </ol>
+
+    <p>And that's it, our red circle:
+
+
+<div class="sample"><canvas id="_c1"></canvas></div> 
 <script>
-    var director = new CAAT.Director().initialize(100,100,document.getElementById('_c1'));
+    // We assume that there's a element called _c1 in the dom.
+    // This element must be a Canvas element.
+    var director = new CAAT.Director().initialize(
+            100,100,
+            document.getElementById('_c1'));
+
     var scene=     new CAAT.Scene().create();
-    var circle=    new CAAT.ShapeActor().create().setLocation(20,20).setSize(60,60).setFillStyle('#ff0000').setStrokeStyle('#000000');
+    var circle=    new CAAT.ShapeActor().
+            create().
+            setLocation(20,20).
+            setSize(60,60).
+            setFillStyle('#ff0000').
+            setStrokeStyle('#000000');
 
     scene.addChild(circle);
     director.addScene(scene);
 
     director.loop(1);
+</script>
+
+<div class="section">
+    <p>In this other example, we're not specifying a DOM canvas element to the Director instantiation. The director itself will create one for us
+    and we'll be responsible for adding the element to the desired position in the DOM.</p>
+
+    <div class="code">
+        <pre class="brush: js; auto-links: false; toolbar: false;">
+<script>
+    // We are not pointing any canvas in the director creation statement,
+    // so the director will create a Canvas for us.
+    var director2 = new CAAT.Director().initialize(100,100);
+
+    // add the canvas to the document:
+    document.getElementById('div_canvas2').appendChild( director2.canvas );
+
+    var scene2=     new CAAT.Scene().create();
+    var circle2=    new CAAT.ShapeActor().
+            create().
+            setLocation(20,20).
+            setSize(60,60).
+            setFillStyle('#ff00ff').
+            setStrokeStyle('#00ff00');
+
+    scene2.addChild(circle2);
+    director2.addScene(scene2);
+
+    director2.loop(1);
+</script>            
+        </pre>
+    </div>
+
+</div>
+
+<div class="sample" id="div_canvas2"></div>
+<script>
+    // We are not pointing any canvas in the director creation statement,
+    // so the director will create a Canvas for us.
+    var director2 = new CAAT.Director().initialize(100,100);
+
+    // add the canvas to the document:
+    document.getElementById('div_canvas2').appendChild( director2.canvas );
+
+    var scene2=     new CAAT.Scene().create();
+    var circle2=    new CAAT.ShapeActor().
+            create().
+            setLocation(20,20).
+            setSize(60,60).
+            setFillStyle('#ff00ff').
+            setStrokeStyle('#00ff00');
+
+    scene2.addChild(circle2);
+    director2.addScene(scene2);
+
+    director2.loop(1);
 </script>
 
 </body>
