Tutorial modifications. Added: tutorial 3, Actor hierarchy. Added: beginning of the game bubbles. Added some changes to general api.

--- a/examples/tutorial/tut1.html
+++ b/examples/tutorial/tut1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>tut1</title>
+<title>Tutorial 1 - Getting started</title>
 
 <script type="text/javascript" src="sh/shCore.js"></script>
 <script type="text/javascript" src="sh/shBrushJScript.js"></script>
