Updates on document structure.

--- a/examples/tutorial/tut3.html
+++ b/examples/tutorial/tut3.html
@@ -931,8 +931,7 @@ function setScaleAnchored( scale_x, scale_y, anchor )</pre></div>
                 </script>
             </pre>
         </div>
-        <div>
-            <canvas id="_c4"></canvas></div>
+        <div><canvas id="_c4"></canvas></div>
             <script>
                 (function() {
                 var _director_4= new CAAT.Director().initialize(
@@ -1005,7 +1004,7 @@ function setScaleAnchored( scale_x, scale_y, anchor )</pre></div>
                     })();
             </script>
         </div>
-    </div>
+
     <div class="chapter">
         <h2>Clipping</h2>
         <p>Clipping is by default disabled on CAAT. Enabling it results in slowe performance, so it
@@ -1202,7 +1201,7 @@ function setScaleAnchored( scale_x, scale_y, anchor )</pre></div>
                 })();
             </script>
         </div>
-    </div>
+
     <div class="chapter">
         <h2>Events</h2>
         <p>By default, a CAAT Actor does nothing with the input events it receives. The
@@ -1541,7 +1540,7 @@ function setScaleAnchored( scale_x, scale_y, anchor )</pre></div>
                 })();
             </script>
         </div>
-    </div>
+
 
 <div class="section">
     <h1>CAAT.TextActor</h1>
@@ -1824,7 +1823,7 @@ function setScaleAnchored( scale_x, scale_y, anchor )</pre></div>
         </script>
     </div>
 
-</div>
+
 
 <div class="section">
     <h1>CAAT.ShapeActor</h1>
@@ -2056,7 +2055,6 @@ function setScaleAnchored( scale_x, scale_y, anchor )</pre></div>
         </script>
     </div>
 
-</div>
 
 <div class="section">
     <h1>Defining custom actors</h1>
